feat: create invoices library
