# backend/src/swagger/output.json
@@ -192,7 +192,126 @@
             }
           }
         }
-      }
+    },
+        "/invoices/paths/{clientId}": {
+            "get": {
+              "summary": "Find invoices paths by client ID",
+              "operationId": "handleFindInvoicePathByClient",
+              "parameters": [
+                {
+                  "name": "clientId",
+                  "in": "path",
+                  "required": true,
+                  "schema": {
+                    "type": "integer"
+                  },
+                  "description": "Client ID"
+                }
+              ],
+              "responses": {
+                "200": {
+                  "description": "A list of invoices for the specified client",
+                  "content": {
+                    "application/json": {
+                      "schema": {
+                        "type": "object",
+                        "properties": {
+                          "success": {
+                            "type": "boolean"
+                          },
+                          "data": {
+                            "type": "array",
+                            "items": {
+                              "type": "array",
+                              "items": {
+                                "type": "object",
+                                "properties": {
+                                  "id": {
+                                    "type": "integer"
+                                  },
+                                  "monthRef": {
+                                    "type": "string"
+                                  },
+                                  "kwhCount": {
+                                    "type": "integer"
+                                  },
+                                  "price": {
+                                    "type": "string"
+                                  },
+                                  "sceeKwh": {
+                                    "type": "integer"
+                                  },
+                                  "sceePrice": {
+                                    "type": "string"
+                                  },
+                                  "gdKwh": {
+                                    "type": "integer"
+                                  },
+                                  "gdPrice": {
+                                    "type": "string"
+                                  },
+                                  "publicContrib": {
+                                    "type": "string"
+                                  },
+                                  "installationId": {
+                                    "type": "integer"
+                                  },
+                                  "createdAt": {
+                                    "type": "string",
+                                    "format": "date-time"
+                                  },
+                                  "updatedAt": {
+                                    "type": "string",
+                                    "format": "date-time"
+                                  }
+                                }
+                              }
+                            }
+                          }
+                        }
+                      }
+                    }
+                  }
+                },
+                "400": {
+                  "description": "Bad request, clientId is required and must be a number",
+                  "content": {
+                    "application/json": {
+                      "schema": {
+                        "type": "object",
+                        "properties": {
+                          "success": {
+                            "type": "boolean"
+                          },
+                          "error": {
+                            "type": "string"
+                          }
+                        }
+                      }
+                    }
+                  }
+                },
+                "500": {
+                  "description": "Internal server error",
+                  "content": {
+                    "application/json": {
+                      "schema": {
+                        "type": "object",
+                        "properties": {
+                          "success": {
+                            "type": "boolean"
+                          },
+                          "error": {
+                            "type": "string"
+                          }
+                        }
+                      }
+                    }
+                  }
+                }
+              }
+            }
+        }
     }
   }
   
